nginx-ingress/nginx-ingress-object-allhosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allhosts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /grafana
        pathType: Prefix
      - backend:
          service:
            name: python-app
            port:
              number: 80
        path: /python
        pathType: Prefix
      - backend:
          service:
            name: getting-started-app
            port:
              number: 80
        path: /getting
        pathType: Prefix
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /echoserver
        pathType: Prefix
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /prometheus
        pathType: Prefix
