nginx-ingress/nginx-ingress-object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hatimapps.com
    http:
      paths:
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 80
      - path: /getting
        pathType: Prefix
        backend:
          service:
            name: getting-started-app
            port:
              number: 80
